--- a/force-app/main/default/lwc/applicationTree/applicationTree.html
+++ b/force-app/main/default/lwc/applicationTree/applicationTree.html
@@ -4,7 +4,20 @@
 
 <!-- Application Tree -->
 <template>
-    <lightning-card title={cardTitle} icon-name="custom:custom55">
+    <lightning-card icon-name="custom:custom55">
+
+        <div slot="title" class="slds-grid slds-grid_align-spread">
+            <div>{cardTitle}</div>
+            <div class="slds-grid" style="font-weight:bold">
+                <div class="slds-col slds-col_padded slds-m-left_xx-large slds-text-heading_small">
+                    Totalt Begärt: {totalRequested}
+                </div>
+                <div class="slds-col slds-col_padded slds-m-left_xx-large slds-text-heading_small">
+                    Totalt Beviljat: {totalGranted}
+                </div>
+            </div>
+        </div>
+
         <div class="slds-m-around_medium">
 
             <lightning-tree-grid
