Update LWCs for screen flow triggering and data handling
Updated the 'applicationTree' and 'screenFlow' LWCs to enable triggering the 'screenFlow' component via the 'applicationTree' component, capturing changes made in the flow and reflecting those changes in the 'applicationTree'. Introduced a new 'flowApiName' property to the 'applicationTree' component, allowing it to specify the flow used in the 'screenFlow' component. Simplified the 'screenFlow' component by removing unnecessary parameters and implementing a more generalized approach to handling input data.

--- a/force-app/main/default/lwc/applicationTree/applicationTree.html
+++ b/force-app/main/default/lwc/applicationTree/applicationTree.html
@@ -31,6 +31,7 @@
 
             <c-bidragsrader-modal record-id={recId} is-open={isModalOpen} onclose={closeModal}></c-bidragsrader-modal>
 
+            <c-screen-flow flow-api-name={childRecordFlowApiName} onclose={handleFlowSubmit}></c-screen-flow>
         </div>
     </lightning-card>
 </template>
