Add functionality to display related Applications from the last X months
A function `getLatestApplications` has been added to `ApplicationFormsService.cls` that returns a list of recent applications. The `ApplicationFormsController.cls` has been updated to expose this function. Additionally, the `applicationTree` component now includes links to the most recent applications in its output.

--- a/force-app/main/default/lwc/applicationTree/applicationTree.html
+++ b/force-app/main/default/lwc/applicationTree/applicationTree.html
@@ -15,6 +15,14 @@
                 <div class="slds-col slds-col_padded slds-m-left_xx-large slds-text-heading_small">
                     Totalt Beviljat: {totalGranted}
                 </div>
+                <div class="slds-col slds-col_padded slds-m-left_xx-large slds-text-heading_small">
+                    Ansökningar senaste {monthsOld} mån: &nbsp;(&nbsp;
+                    <template for:each={urls} for:item="url">
+                        <a key={url.url} href={url.url} target="_blank">{url.label}</a>
+                        &nbsp;
+                    </template>
+                    )
+                </div>
             </div>
         </div>
 
