Add tooltips to application links and improve detail generation
Expanded the application link functionality by adding tooltips to provide more contextual information. Also, significantly restructured and optimized the 'generateDetails' function in 'applicationTree.js' file for more efficient detail generation. Preparatory note for future validation added as well.

--- a/force-app/main/default/lwc/applicationTree/applicationTree.html
+++ b/force-app/main/default/lwc/applicationTree/applicationTree.html
@@ -18,7 +18,7 @@
                 <div class="slds-col slds-col_padded slds-m-left_xx-large slds-text-heading_small">
                     Ansökningar senaste {monthsOld} mån: &nbsp;(&nbsp;
                     <template for:each={urls} for:item="url">
-                        <a key={url.url} href={url.url} target="_blank">{url.label}</a>
+                        <a key={url.url} href={url.url} target="_blank" title={url.details}>{url.label}</a>
                         &nbsp;
                     </template>
                     )
