--- a/force-app/main/default/lwc/acceptMultipleApplicationsModal/acceptMultipleApplicationsModal.html
+++ b/force-app/main/default/lwc/acceptMultipleApplicationsModal/acceptMultipleApplicationsModal.html
@@ -17,6 +17,7 @@
             <option for:each={approvers} for:item="approver" value={approver.Id} key={approver.Id}>{approver.Name}</option>
         </select>
         <span class="xc-error" if:true={errorMsg.length}>{errorMsg}</span>
+        <lightning-input class="slds-form-element__label slds-no-flex" type="checkbox" disabled={disabledCheckbox} label="Ja, jag vill godkänna alla markerade ansökningar med angivna belopp" value={isValidated} onchange={handleCheckbox}> </lightning-input>
         <!-- <lightning-input
                 data-validity-check="true"
                 required
@@ -56,13 +57,14 @@
                 variant="brand"
                 class="slds-button slds-button__brand"
                 onclick={onSave}
-                label={labels.APPROVE}
-                title={labels.APPROVE}></lightning-button>
+                label="Godkänn"
+                title="Godkänn"
+                disabled={disabledButton}></lightning-button>
         <lightning-button
                 variant="neutral"
                 class="slds-button slds-button__neutral"
                 onclick={onCancel}
-                label={labels.CANCEL}
-                title={labels.CANCEL}></lightning-button>
+                label="Avbryt"
+                title="Avbryt"></lightning-button>
     </lightning-modal-footer>
 </template>
