Update sematics and improve user interface
Several changes have been made to the code to refine semantics, enhance user interface, and improve overall performance. Adjustments include refining array handling and conditional structures and adding debug messages. Furthermore, minor user interface improvements like making an input field read-only and reformatting code for readability purposes have been incorporated. The supported API version for various Lightening components has been updated as well.

--- a/force-app/main/default/lwc/acceptApplication/acceptApplication.html
+++ b/force-app/main/default/lwc/acceptApplication/acceptApplication.html
@@ -28,6 +28,7 @@
                 field-level-help="Beviljat belopp - t ex presentkortets värde för den sökande."
                 placeholder={labels.APPROVED_AMOUNT}
                 label="Beviljat belopp (kr)"
+                read-only="true"
                 onchange={inputChange}></lightning-input>
         <lightning-input
                 data-validity-check="true"
